# isbox

./: .gitignore  CMakeLists.txt  READMe.md  tmp_signup_test.mjs  vcpkg.json
backend/: CMakeLists.txt  common.hpp  main.cpp  vcpkg.json
backend/app/: main.cpp
backend/board/controller/: BoardController.cpp  BoardController.h
backend/board/mapper/: BoardMapper.cpp  BoardMapper.h
backend/board/model/: BoardPostModel.h  BoardTypes.h
backend/board/service/: BoardService.cpp  BoardService.h  BoardService_Command.cpp  BoardService_Command.h  BoardService_Query.cpp  BoardService_Query.h  BoardService_Validation.cpp  BoardService_Validation.h
backend/config/: config copy.json  config.json.example  keys.local.example copy.json
backend/controllers/: BoardController.cpp  BoardController.h  DbTestController.cpp  DbTestController.hpp  FriendController.cpp  FriendController.h  IngredientController.cpp  IngredientController.h  MemberController.cpp  MemberController.h
backend/friend/controller/: FriendController.cpp  FriendController.h
backend/friend/mapper/: FriendMapper.cpp  FriendMapper.h
backend/friend/model/: FriendTypes.h
backend/friend/service/: FriendService.cpp  FriendService.h  FriendService_Command.cpp  FriendService_Command.h  FriendService_Policy.cpp  FriendService_Policy.h  FriendService_Query.cpp  FriendService_Query.h
backend/ingredient/controller/: IngredientController.cpp  IngredientController.h
backend/ingredient/mapper/: IngredientMapper.cpp  IngredientMapper.h
backend/ingredient/model/: IngredientTypes.h
backend/ingredient/service/: IngredientService.cpp  IngredientService.h  IngredientService_Command.cpp  IngredientService_Command.h  IngredientService_Query.cpp  IngredientService_Query.h  IngredientService_Validation.cpp  IngredientService_Validation.h  NutritionFoodsSearchService.cpp  NutritionFoodsSearchService.h  ProcessedFoodSearchService.cpp  ProcessedFoodSearchService.h  ProcessedFoodSearchService_Assembler.cpp  ProcessedFoodSearchService_Assembler.h  ProcessedFoodSearchService_Cache.cpp  ProcessedFoodSearchService_Cache.h  ProcessedFoodSearchService_Client.cpp  ProcessedFoodSearchService_Client.h  ProcessedFoodSearchService_KeyProvider.cpp  ProcessedFoodSearchService_KeyProvider.h  ProcessedFoodSearchService_Text.cpp  ProcessedFoodSearchService_Text.h
backend/mappers/: BoardMapper.cpp  BoardMapper.h  FriendMapper.cpp  FriendMapper.h  IngredientMapper.cpp  IngredientMapper.h  MemberMapper.cpp  MemberMapper.h  PublicNutritionFoodMapper.cpp  PublicNutritionFoodMapper.h
backend/member/controller/: MemberController.cpp  MemberController.h
backend/member/mapper/: MemberMapper.cpp  MemberMapper.h
backend/member/model/: MemberTypes.h
backend/member/service/: MemberService.cpp  MemberService.h  MemberService_Auth.cpp  MemberService_Auth.h  MemberService_Experience.cpp  MemberService_Experience.h  MemberService_Profile.cpp  MemberService_Profile.h  MemberService_Profile_Command.cpp  MemberService_Profile_Command.h  MemberService_Profile_Query.cpp  MemberService_Profile_Query.h  MemberService_SessionStore.cpp  MemberService_SessionStore.h
backend/models/: BoardPostModel.h  BoardTypes.h  FriendTypes.h  IngredientTypes.h  MemberDTO.cpp  MemberTypes.h
backend/services/: BoardService.cpp  BoardService.h  FriendService.cpp  FriendService.h  IngredientService.cpp  IngredientService.h  MemberService.cpp  MemberService.h  ProcessedFoodSearchService.cpp  ProcessedFoodSearchService.h
build-vcpkg/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeCache.txt.tmp38945  CMakeCache.txt.tmpc7ec2  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  isbox_backend.slnx  isbox_backend.vcxproj  isbox_backend.vcxproj.filters
build-vcpkg/isbox_backend.dir/Debug/: isbox_backend.exe.recipe  isbox_backend.ilk
build-vcpkg/isbox_backend.dir/Debug/isbox_backend.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vcpkg/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-vcpkg/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  (+1 more)
build-vcpkg/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
docs/: FOLDER_ROLES.md  NEXT.md
docs/DB_schema/: board_post_schema.md  ingredient_schema.md  login_schema.md  member_schema.md
docs/backend/: DB_Drogon_connection.md  DbTestController_explanation.md  flow
docs/board/: board_backend_code_explanation.md  board_implementation_guide.md
docs/database_test/: 01_drogon_db_test2_overview.md  02_main_cpp_explanation.md  03_models_explanation.md  04_repository_explanation.md  05_backend_layering_guide.md  README.md
docs/login/: backend_login_signup_code_explanation.md  login_fast_implementation_plan.md  signup_implementation_plan.md
drogon-db-test/: CMakeLists.txt  config.json  vcpkg.json
drogon-db-test/src/: main.cpp
drogon-db-test2/: CMakeLists.txt  config.json  vcpkg.json
drogon-db-test2/src/: main.cpp
drogon-db-test2/src/models/: HealthCheckLogModel.h  HealthCheckModel.h
drogon-db-test2/src/repositories/: HealthCheckRepository.h
frontend/: README.md  community.html  home.html  profile.html  recipes.html
frontend/css/: style.css
frontend/html-version/: community.html  food-mbti.html  home.html  index.html  ingredients.html  profile.html  recipes.html
frontend/html-version/css/: style.css
frontend/html-version/js/: app.js
frontend/js/: analysis-summary.md  app.js
frontend/js/modules/: auth.js  community.js  food-mbti.js  ingredients.js  level.js  profile.js  recipes.js  state.js  storage.js  ui.js
frontend/pages/: community.html  food-mbti.html  home.html  index.html  ingredients.html  profile.html  recipes.html
(+3 files in other folders)
